add archivio model

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,3 @@
-<p>Server with ID {{serverId}} is {{serverStatus}}</p>
+<p [ngStyle]="{backgroundColor: getColor()}" [ngClass]="{online:serverStatus === 'online'}">
+    {{serverName}} with ID {{serverId}} is {{serverStatus}}
+</p>
