--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-header></app-header>
 <h3>I'm AppComponent</h3>
 <hr>
-<app-servers></app-servers>
+<!-- <app-servers></app-servers> -->
+<posizioni-list></posizioni-list>
