inizio inserimento login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 
 <app-header></app-header>
-<h3>I'm AppComponent</h3>
-<hr>
-<!-- <app-servers></app-servers> -->
-<posizioni-list></posizioni-list>
+
+<router-outlet></router-outlet>>
