--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,19 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Recipe Book</a>
+      <a href="#" class="navbar-brand">Data Marketplace</a>
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#">Recipes</a></li>
-        <li><a href="#">Shopping List</a></li>
+        <li routerLinkActive="active" *ngIf="!authService.isAuthenticated()"><a routerLink="/">Home</a></li>
       </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+          <ng-template [ngIf]="authService.isAuthenticated()">
+            <li><a style="cursor:pointer;" (click)="onLogout()">Logout</a></li>
+          </ng-template>
+        </ul>
     </div>
   </div>
 </nav>
