--- a/src/app/acquisti/acquisti-list/acquisti-list.component.html
+++ b/src/app/acquisti/acquisti-list/acquisti-list.component.html
@@ -1,3 +1,3 @@
-<archivi-list></archivi-list>
+<archivi-list [title]="Ciao"></archivi-list>
 
-<acquisti-map></acquisti-map>
+<app-acquisti-map></app-acquisti-map>
