--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -9,6 +9,9 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password" ngModel class="form-control">
       </div>
+      <div class="alert alert-danger" role="alert" *ngIf="renderedKo">
+        {{responseMessage}}
+      </div>
       <button class="btn btn-primary" type="submit">Sign in</button>
     </form>
   </div>
