--- a/src/app/acquisti/acquisti-list/acquisti-list.component.html
+++ b/src/app/acquisti/acquisti-list/acquisti-list.component.html
@@ -1,3 +1,3 @@
-<archivi-list [title]="Ciao"></archivi-list>
+<archivi-list [title]="title"></archivi-list>
 
 <app-acquisti-map></app-acquisti-map>
