--- a/src/app/archivi/archivi-utenti/archivi-utenti.component.html
+++ b/src/app/archivi/archivi-utenti/archivi-utenti.component.html
@@ -8,6 +8,7 @@
 
     <div class="row" >
         <archivi-list 
+            [archivi]="archivi"
             [title]="titleArchiviUtenti">
         </archivi-list>
     </div>
