--- a/src/app/acquisti/acquisti-map/acquisti-map.component.html
+++ b/src/app/acquisti/acquisti-map/acquisti-map.component.html
@@ -1,3 +1,8 @@
-<p>
-  acquisti-map works!
-</p>
+<agm-map [latitude]="lat" [longitude]="lng" (mapClick)="onChooseLocation($event)" #agmMap>
+    <agm-drawing-manager (polygonComplete)="polygonCreated($event)" 
+      [drawingControl]="managerOptions.drawingControl" 
+      [drawingControlOptions]="managerOptions.drawingControlOptions"
+      [polygonOptions]='managerOptions.polygonOptions' 
+      [drawingMode]='managerOptions.drawingMode'>
+    </agm-drawing-manager>
+</agm-map>
