--- a/src/app/archivi/archivi-item/archivi-item.component.html
+++ b/src/app/archivi/archivi-item/archivi-item.component.html
@@ -9,6 +9,70 @@
       class="btn btn-primary">
       Annulla
     </button>
+  </div>
+  <div class="row">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Nuovo Archivio
+      </div>
+      <div class="panel-body">
 
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              Nuova Posizione
+            </div>
+            <div class="panel-body">
+              <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+                <div class="row">                
+                    <div class="form-row" >
+                        <div class="form-group col-md-3">
+                            <label for="data">Data</label>
+                            <div class="input-group">
+                                <input class="form-control" placeholder="dd/mm/yyyy"
+                                        id = "data"
+                                        name="data"
+                                        ngModel
+                                        ngbDatepicker
+                                        #data="ngbDatepicker"
+                                        required>
+                                <div class="input-group-append">
+                                    <button class="btn btn-outline-secondary" (click)="data.toggle()" type="button">
+                                        <img src="./assets/img/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;"/>
+                                    </button>
+                                </div>
+                            </div>  
+                        </div>
+
+                        <div class="form-group col-md-3">
+                            <label for="time">Data</label>
+                            <ngb-timepicker id="time" [(ngModel)]="time" 
+                              [seconds]="true" name="time" required>
+                            </ngb-timepicker>
+                        </div>
+
+                        <div class="form-group col-md-3">
+                            <label for="lat">Latitudine</label>
+                            <input id="lat" ngModel name="lat" type="number" required class="form-control">
+                        </div>
+
+                        <div class="form-group col-md-3">
+                            <label for="lng">Longitudine</label>
+                            <input id="lng" ngModel name="lng" type="number" required class="form-control">
+                        </div>
+                    </div>              
+                </div>
+                <div class="row">
+                  <button class="btn btn-primary" type="submit">
+                    Aggiungi in Archivio
+                  </button> 
+                </div>
+              </form>
+            </div>
+          </div>
+
+          <posizioni-list [posizioni]="posizioni"></posizioni-list>
+        
+      </div>
+    </div>
   </div>
 </div>
