--- a/src/app/archivi/archivi-item/archivi-item.component.html
+++ b/src/app/archivi/archivi-item/archivi-item.component.html
@@ -1,67 +1,74 @@
-<div class="container">
-  <div class="row">
-    <button (click)="onSalvaClick()"
-      class="btn btn-primary">
-      Salva
-    </button>
 
-    <button (click)="onAnnullaClick()"
-      class="btn btn-primary">
-      Annulla
-    </button>
+  <div class="row"> 
+    <div class="col">
+      <button (click)="onSalvaClick()"
+        class="btn btn-primary">
+        Salva
+      </button>
+
+      <button (click)="onAnnullaClick()"
+        class="btn btn-primary">
+        Annulla
+      </button>
+    </div>
   </div>
+
   <div class="row">
-    <div class="panel panel-default">
-      <div class="panel-heading">
+
+    <div class="col">
+    <div class="card">
+      <div class="card-header">
         Nuovo Archivio
       </div>
-      <div class="panel-body">
+      <div class="card-body">
 
-          <div class="panel panel-default">
-            <div class="panel-heading">
+          <div class="card">
+            <div class="card-header">
               Nuova Posizione
             </div>
-            <div class="panel-body">
+            <div class="card-body">
               <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-                <div class="row">                
-                    <div class="form-row" >
-                        <div class="form-group col-md-3">
-                            <label for="data">Data</label>
-                            <div class="input-group">
-                                <input class="form-control" placeholder="dd/mm/yyyy"
-                                        id = "data"
-                                        name="data"
-                                        ngModel
-                                        ngbDatepicker
-                                        #data="ngbDatepicker"
-                                        required>
-                                <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary" (click)="data.toggle()" type="button">
-                                        <img src="./assets/img/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;"/>
-                                    </button>
-                                </div>
-                            </div>  
-                        </div>
 
-                        <div class="form-group col-md-3">
-                            <label for="time">Data</label>
-                            <ngb-timepicker id="time" [(ngModel)]="time" 
-                              [seconds]="true" name="time" required>
-                            </ngb-timepicker>
+               
+            <div class="form-row" >
+                <div class="form-group col-md-6">
+                    <label for="data">Data</label>
+                    <div class="input-group">
+                        <input class="form-control" placeholder="dd/mm/yyyy"
+                                id = "data"
+                                name="data"
+                                ngModel
+                                ngbDatepicker
+                                #data="ngbDatepicker"
+                                required>
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary" (click)="data.toggle()" type="button">
+                                <img src="./assets/img/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;"/>
+                            </button>
                         </div>
-
-                        <div class="form-group col-md-3">
-                            <label for="lat">Latitudine</label>
-                            <input id="lat" ngModel name="lat" type="number" required class="form-control">
-                        </div>
-
-                        <div class="form-group col-md-3">
-                            <label for="lng">Longitudine</label>
-                            <input id="lng" ngModel name="lng" type="number" required class="form-control">
-                        </div>
-                    </div>              
+                    </div>  
                 </div>
-                <div class="row">
+
+                <div class="form-group col-md-6">
+                    <ngb-timepicker id="time" [(ngModel)]="time" 
+                      [seconds]="true" name="time" required>
+                    </ngb-timepicker>
+                </div>
+              </div>
+                <div class="form-row" >
+                  <div class="form-group col-md-6">
+                      <label for="lat">Latitudine</label>
+                      <input id="lat" ngModel name="lat" type="number" required class="form-control">
+                  </div>
+
+                  <div class="form-group col-md-6">
+                      <label for="lng">Longitudine</label>
+                      <input id="lng" ngModel name="lng" type="number" required class="form-control">
+                  </div>
+                </div>
+              
+                
+                <div class="form-row">
                   <button class="btn btn-primary" type="submit">
                     Aggiungi in Archivio
                   </button> 
@@ -74,5 +81,6 @@
         
       </div>
     </div>
-  </div>
+
+    </div>
 </div>
