--- a/src/app/archivi/archivi-list/archivi-list.component.html
+++ b/src/app/archivi/archivi-list/archivi-list.component.html
@@ -1,8 +1,8 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
+<div class="card ">
+    <div class="card-header">
         {{title}}
     </div>
-    <div class="panel-body">
+    <div class="card-body">
         
         <table class="table">
             <thead>
@@ -10,7 +10,8 @@
                 <th scope="col">Id</th>
                 <th scope="col">Rappr. Timestamp</th>
                 <th scope="col">Rappr. Posizioni</th>
-                <th scope="col">Id</th>
+                <th scope="col" *ngIf="renderedAcquisti">Num. Acquisti</th>
+                <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
@@ -18,14 +19,16 @@
                     <td >{{archivio.id}}</td>
                     <td>{{archivio.rappr_timestamp}}</td>
                     <td>{{archivio.rappr_posizioni}}</td>
+                    <td *ngIf="renderedAcquisti">{{archivio.acquisti}}</td>
                     <td>
                         <button 
-                            *ngIf="posizione"
+                            *ngIf="renderedPosizione"
                             class="btn btn-primary" 
                             (click)="onVisualizzaPosizioni(archivio)">
                             Posizioni
                         </button>
                         <button 
+                            *ngIf="archivio.acquistabile"
                             class="btn btn-primary" 
                             (click)="onElimina(archivio)">
                             Elimina
