--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,10 @@
-<div class="container">
+
   <div class="row">
-    <h1>Benvenuto</h1>
+      <div class="col-md-4 offset-md-4">
+        <h1>Benvenuto</h1>
+      </div>
   </div>
-  <div class="row" *ngIf="!authService.isAuthenticated()">
+  <div class="row" *ngIf="!authService.isAuthenticated()" class="col-md-4 offset-md-4">
       <button class="btn btn-primary" (click)="onLogin()">
         Login
       </button>
@@ -10,4 +12,4 @@
           Registrati
       </button>
   </div>
-</div>
+
