--- a/src/app/posizioni/posizioni-modal/posizioni-modal.component.html
+++ b/src/app/posizioni/posizioni-modal/posizioni-modal.component.html
@@ -1,11 +1,13 @@
 <div class="modal-header">
-    <h4 class="modal-title">Hi there!</h4>
+    <h4 class="modal-title">
+      Archivio: {{archivio.rappr_timestamp}} {{archivio.rappr_posizioni}}
+    </h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    <!-- <posizioni-list [posizioni]="posizioni"></posizioni-list> -->
+    <posizioni-list [posizioni]="archivio.posizioni"></posizioni-list>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
