--- a/src/app/acquisti/acquisti-list/acquisti-list.component.html
+++ b/src/app/acquisti/acquisti-list/acquisti-list.component.html
@@ -1,40 +1,61 @@
 <div class="container">
     <form (ngSubmit)="!dpIni.invalid && onSubmit()" #f="ngForm">
         <div class="form-row" >
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-4">
                 <label for="dataIni">Data dal</label>
                 <div class="input-group">
                     <input class="form-control" placeholder="dd/mm/yyyy"
                             id = "dataIni"
-                            name="dpIni"
+                            name="from"
                             ngModel
                             ngbDatepicker
-                            #dIni="ngbDatepicker"
-                            #dpIni= "ngModel">
+                            #from="ngbDatepicker"
+                            #from= "ngModel">
                     <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" (click)="dIni.toggle()" type="button">
+                        <button class="btn btn-outline-secondary" (click)="from.toggle()" type="button">
                             <img src="./assets/img/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;"/>
                         </button>
                     </div>
                 </div>
-
             </div>
-            <div class="form-group col-md-6">
+
+            <div class="form-group col-md-4">
+                <ngb-timepicker [(ngModel)]="timeFrom" 
+                    name="timeFrom" required>
+                </ngb-timepicker>
+            </div>
+
+            <div class="form-group col-md-4">
+                <label for="utenti">Utente</label>
+                <select multiple id="utenti" class="form-control" ngModel name="utentiSelected">
+                    <option value="">-- Qualsiasi --</option>
+                    <option *ngFor="let utente of utenti">{{utente}}</option> 
+                </select>
+            </div>
+
+            <div class="form-group col-md-4">
                 <label for="dataFin">Data al</label>
                 <div class="input-group">
                     <input class="form-control" placeholder="dd/mm/yyyy"
-                            id = "dataFin"
-                            name="dpFin"
+                            id = "to"
+                            name="to"
                             ngModel
                             ngbDatepicker
-                            #dFin="ngbDatepicker">
+                            #to="ngbDatepicker">
                     <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" (click)="dFin.toggle()" type="button">
+                    <button class="btn btn-outline-secondary" (click)="to.toggle()" type="button">
                         <img src="./assets/img/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;"/>
                     </button>
                     </div>
                 </div>
             </div>
+
+            <div class="form-group col-md-4">
+                <ngb-timepicker [(ngModel)]="timeTo" 
+                    name="timeTo" required>
+                </ngb-timepicker>
+            </div>
+
             <div class="form-group col-md-12">
                 <app-acquisti-map></app-acquisti-map>
             </div>   
@@ -42,14 +63,11 @@
     </form>
 
     
-
-    
-
-    <div class="row" >
+    <!-- <div class="row" >
         <div class="form-group col-md-12">
             <archivi-list [title]="title"></archivi-list>
         </div>
-    </div>
+    </div> -->
 </div>
 
 
