--- a/src/app/acquisti/acquisti-list/acquisti-list.component.html
+++ b/src/app/acquisti/acquisti-list/acquisti-list.component.html
@@ -85,7 +85,13 @@
             </div> 
 
             <div class="form-group col-md-12">
-                <button class="btn btn-primary btn-block" (click)="onAcquista()">
+                <app-datatable [elementId]="timeline"></app-datatable>
+            </div>
+
+            <div class="form-group col-md-12">
+                <button class="btn btn-primary btn-block" 
+                    (click)="onAcquista()"
+                    [disabled]="posizioni.length == 0">
                     Acquista
                 </button>
             </div>
